// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit Duck Tests Action Generator setUnitCelsius should match the snapshot 1`] = `
Object {
  "type": "modules/weather-app/SET_UNIT_CELSIUS",
}
`;

exports[`unit Duck Tests Action Generator setUnitFahrenheit should match the snapshot 1`] = `
Object {
  "type": "modules/weather-app/SET_UNIT_FAHRENHEIT",
}
`;
